--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
-  "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "tsx script/build.ts",
-    "start": "NODE_ENV=production node dist/index.cjs",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
-  },
+ "scripts": {
+  "dev": "cross-env NODE_ENV=development tsx server/index.ts",
+
+  "build:client": "vite build",
+  "build:server": "tsx script/build.ts",
+
+  "build": "npm run build:client && npm run build:server",
+
+  "start": "cross-env NODE_ENV=production node dist/index.cjs",
+
+  "check": "tsc",
+  "db:push": "drizzle-kit push"
+},
+
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -92,6 +99,7 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
+    "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
