--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 
   "build": "npm run build:client && npm run build:server",
 
-  "start": "cross-env NODE_ENV=production node dist/index.cjs",
+  "start": "cross-env NODE_ENV=production node dist/index.js",
 
   "check": "tsc",
   "db:push": "drizzle-kit push"
