--- a/package.json
+++ b/package.json
@@ -3,20 +3,15 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
- "scripts": {
-  "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-
-  "build:client": "vite build",
-  "build:server": "tsx script/build.ts",
-
-  "build": "npm run build:client && npm run build:server",
-
-  "start": "cross-env NODE_ENV=production node dist/index.js",
-
-  "check": "tsc",
-  "db:push": "drizzle-kit push"
-},
-
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development tsx server/index.ts",
+    "build:client": "vite build",
+    "build:server": "tsx script/build.ts",
+    "build": "npm run build:client && npm run build:server",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "check": "tsc",
+    "db:push": "drizzle-kit push"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -105,7 +100,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
-    "typescript": "5.6.3",
+    "typescript": "^5.6.3",
     "vite": "^5.4.20"
   },
   "optionalDependencies": {
