--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,14 +1,27 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["server/**/*"],
+
   "compilerOptions": {
     "noEmit": false,
     "outDir": "dist",
+    "rootDir": ".",
     "module": "ESNext",
     "target": "ES2020",
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": false, 
-    "jsx": "preserve",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "types": ["node"]
-  }
+  },
+
+  "include": [
+    "server/**/*",
+    "shared/**/*",
+    "vite.config.ts"
+  ],
+
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
