--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:client": "vite build",
     "build:server": "tsx script/build.ts",
     "build": "npm run build:client && npm run build:server",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+   "start": "cross-env NODE_ENV=production node dist-server/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
