--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,36 @@
 {
-  "include": ["client/src/**/*", "shared/**/*", "server/**/*"],
-  "exclude": ["node_modules", "build", "dist", "**/*.test.ts"],
   "compilerOptions": {
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
-    "noEmit": true,
+
     "module": "ESNext",
+    "target": "ES2020",
+    "moduleResolution": "bundler",
+
     "strict": true,
     "lib": ["esnext", "dom", "dom.iterable"],
     "jsx": "preserve",
+
     "esModuleInterop": true,
     "skipLibCheck": true,
-    // "allowImportingTsExtensions": true,
-    "moduleResolution": "bundler",
+
     "baseUrl": ".",
-    "types": ["node", "vite/client"],
+    "types": ["vite/client"],
+
     "paths": {
       "@/*": ["./client/src/*"],
       "@shared/*": ["./shared/*"]
     }
-  }
+  },
+
+  "include": [
+    "client/src/**/*",
+    "shared/**/*"
+  ],
+
+  "exclude": [
+    "node_modules",
+    "dist",
+    "server/**/*"
+  ]
 }
